Started fixing error with options bar being partially off screen

--- a/static/style.css
+++ b/static/style.css
@@ -162,7 +162,7 @@ body {
 }
 
 .options{
-    padding-left: 78%;
+    padding-left: 74%;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-right: 20px;
